# Tourbox_Neo_Linux_Driver

./: .clang-tidy  .gitignore  README.md  example.c
.github/: FUNDING.yml
.github/workflows/: main.yml
cpp/: CMakeLists.txt  main.cpp  uinput_helper.hpp
docs/: README.md
docs/lsusb/: STMElectronics-in-Joystick-Mode.txt  Silicon-Labs-CP210x-Uart-Bridge.txt  new-entries.txt
elite/: CMakeLists.txt  README.md  main.cpp
wireshark/: 20230120-TourboxElite-initial-plug-in.pcapng  init.pcapng  init_and_buttons.pcapng
